# Graph_Light_HybridRAG

GraphRAG/: README.md  extract.py  graph_db.py  main.py  pyproject.toml  rag.py  requirements.txt
GraphRAG/documents/: ai_companies.txt  tech_prodcuts.txt
GraphRAG/frontend/: package-lock.json  vite.config.js
GraphRAG/frontend/src/: App.jsx  ChatPanel.jsx  GraphView.jsx  index.css
HybridRAG/: README.md  main.py  pyproject.toml
LightRAG/: README.md  pyproject.toml
LightRAG/data/: sample.txt
LightRAG/rag_storage/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_llm_response_cache.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
LightRAG/src/: ingest.py  ingest_folder.py  query.py  rag_engine.py  server.py  tokenizer.py
