[project]
name = "hybridrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.6.0",
    "groq>=1.2.0",
    "networkx>=3.6.1",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
]
